# MuseScore

./: CMakeLists.txt
src/appshell/qml/NotationPage/: NotationPage.qml
src/engraving/: CMakeLists.txt
src/engraving/libmscore/: note.cpp  score.h
src/engraving/playback/: playbackcontext.cpp  playbackcontext.h  playbackeventsrenderer.cpp  playbackmodel.cpp  renderingcontext.h
src/engraving/playback/renderers/: glissandosrenderer.cpp  glissandosrenderer.h  gracenotesrenderer.cpp  ornamentsrenderer.cpp  renderbase.h  tremolorenderer.cpp
src/engraving/playback/utils/: expressionutils.h
src/engraving/utests/: playbackeventsrendering_tests.cpp  playbackmodel_tests.cpp
src/framework/audio/: CMakeLists.txt  abstracteventsequencer.h  abstractsynthesizer.cpp  abstractsynthesizer.h  audiotypes.h
src/framework/audio/internal/synthesizers/fluidsynth/: fluidsequencer.cpp  fluidsynth.cpp  fluidsynth.h  sfcachedloader.h
src/framework/audio/internal/worker/: eventaudiosource.cpp
src/framework/audio/qml/MuseScore/Audio/: VolumePressureMeter.qml  VolumeSlider.qml
src/framework/global/: realfn.h
src/framework/mpe/: events.h  mpetypes.h
src/framework/mpe/internal/: articulationstringutils.h
src/framework/mpe/resources/: general_keyboard_articulations_profile.json  general_percussion_articulations_profile.json  general_strings_articulations_profile.json  general_voice_articulations_profile.json  general_winds_articulations_profile.json
src/framework/mpe/tests/: multinotearticulationstest.cpp  singlenotearticulationstest.cpp
src/framework/musesampler/internal/: apitypes.h  libhandler.h  musesamplerresolver.cpp  musesamplersequencer.cpp  musesamplerwrapper.cpp  musesamplerwrapper.h  soundid_stringify.h
src/framework/musesampler/ms_src/: CMakeLists.txt
src/framework/vst/internal/: vstcomponenthandler.cpp  vstcomponenthandler.h  vstplugin.cpp  vstplugin.h
src/framework/vst/internal/synth/: vstsequencer.cpp  vstsequencer.h
src/playback/qml/MuseScore/Playback/: MixerPanel.qml
src/playback/view/internal/: inputresourceitem.cpp  mixerchannelitem.cpp  mixerchannelitem.h
